# comp1-software

./: .gitignore  README.md
Example-L476/blink476/: CMakeLists.txt  blink476.ioc
Example-L476/blink476/Core/Src/: main.cpp  stm32l4xx_hal_msp.c
Examples/Blink/: Blink.ioc  CMakeLists.txt  arm-none-eabi-gcc.cmake  cmake.sh
Examples/Blink/Core/Inc/: .gitignore  canTest.h  main.h  pwmTest.h
Examples/Blink/Core/Src/: .gitignore  canTest.cpp  main.cpp  pwmTest.cpp
Examples/Blink_L476/: CMakeLists.txt
Examples/Blink_L476/Core/Inc/: stm32l4xx_hal_conf.h
Examples/Blinky/: .cproject  .mxproject  .project  Blink.ioc
Examples/Blinky/Core/Inc/: stm32f3xx_hal_conf.h
Examples/Blinky/Core/Src/: main.c
Examples/Blinky/Peripherals/inc/: I2CInterface.h
Examples/UdpSendReceive/: README.md  config.py  udp_receive.py  udp_send.py
Examples/asio/: CMakeLists.txt  README.md  arm-linux-gnueabihf-gcc.cmake
Examples/asio/src/: combinedServer.cpp  ioExample.cpp  tcpclient.cpp  tcpserver.cpp  udpclient.cpp  udpserver.cpp
Examples/socketio-python/: README.md  client_logger.py  client_telemetry.py  server.py
Examples/socketio-python/templates/: index.html
OnLand/: requirements.txt
OnLand/ControlLaptop/angular-UI/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
OnLand/ControlLaptop/angular-UI/e2e/src/: app.e2e-spec.ts
OnLand/ControlLaptop/angular-UI/src/: index.html  styles.css
OnLand/ControlLaptop/angular-UI/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
OnLand/ControlLaptop/angular-UI/src/app/components/advance-retract/: advance-retract.component.css  advance-retract.component.html  advance-retract.component.spec.ts  advance-retract.component.ts
OnLand/ControlLaptop/angular-UI/src/app/components/configuration-bar/: configuration-bar.component.css  configuration-bar.component.html  configuration-bar.component.spec.ts  configuration-bar.component.ts
OnLand/ControlLaptop/angular-UI/src/app/components/control-bar/: control-bar.component.css  control-bar.component.html  control-bar.component.spec.ts  control-bar.component.ts
OnLand/ControlLaptop/angular-UI/src/app/components/display-log/: display-log.component.css  display-log.component.html  display-log.component.spec.ts  display-log.component.ts
OnLand/ControlLaptop/angular-UI/src/app/components/estop/: estop.component.css
OnLand/ControlLaptop/angular-UI/src/app/components/logo-bar/: logo-bar.component.css  logo-bar.component.html  logo-bar.component.spec.ts  logo-bar.component.ts
OnLand/ControlLaptop/angular-UI/src/app/components/min-actual-max/: min-actual-max.component.css  min-actual-max.component.html  min-actual-max.component.spec.ts  min-actual-max.component.ts
OnLand/ControlLaptop/angular-UI/src/app/components/natural-gas/: natural-gas.component.css  natural-gas.component.html  natural-gas.component.spec.ts  natural-gas.component.ts
OnLand/ControlLaptop/angular-UI/src/app/components/navigation-bar/: navigation-bar.component.css  navigation-bar.component.html  navigation-bar.component.ts
OnLand/ControlLaptop/angular-UI/src/app/components/navigation-info/: navigation-info.component.css  navigation-info.component.html  navigation-info.component.spec.ts  navigation-info.component.ts
OnLand/ControlLaptop/angular-UI/src/app/components/power-metric-table/: power-metric-table.component.css  power-metric-table.component.html  power-metric-table.component.spec.ts  power-metric-table.component.ts
OnLand/ControlLaptop/angular-UI/src/app/components/powermetrics-bar/: powermetrics-bar.component.css  powermetrics-bar.component.html  powermetrics-bar.component.spec.ts  powermetrics-bar.component.ts
OnLand/ControlLaptop/angular-UI/src/app/components/schematic-icon/: schematic-icon.component.html  schematic-icon.component.spec.ts  schematic-icon.component.ts
OnLand/ControlLaptop/angular-UI/src/app/components/schematics/: schematics.component.css  schematics.component.html  schematics.component.spec.ts  schematics.component.ts
OnLand/ControlLaptop/angular-UI/src/app/components/state/: state.component.css  (+2 more)
OnLand/ControlLaptop/angular-UI/src/app/services/: models.ts  socketio.service.ts
OnLand/PDS/: boring_packet.py  config.py
OnLand/PDS/UDP/: udp_connection.py
Protobuf/: Paradigm.proto  README.md  updateProtos.bat  updateProtos.sh
Services/influx-grafana/: README.md  run_influx_grafana.sh
Services/influx-grafana/grafana-data/: .gitignore
Services/influx-grafana/influx-data/: .gitignore
Subsurface/FlightComputer/: CMakeLists.txt
Subsurface/FlightComputer/Tests/: CMakeLists.txt  FlightComputerTest.cpp
Subsurface/FlightComputer/include/: FlightComputer.h  Message.h  NetClient.h
Subsurface/FlightComputer/src/: FlightComputer.cpp
Subsurface/FlightComputer/tools/net_servers/: README.md  tcp_server.py  udp_server.py
Subsurface/FlightComputer/vendors/proto/windows/Release/: libprotobuf-lite.lib
Subsurface/Node/Common/Peripherals/Inc/: A60022A.h  DPS310.h  DpsRegister.h  I2CInterface.h  can_interface.h  can_manager.h  convert_hal_status.h  dps310_config.h  gas_sensor.h
Subsurface/Node/Common/Peripherals/Src/: A60022A.cpp  DPS310.cpp  I2CInterface.cpp  SPIInterface.cpp  can_interface.cpp  can_manager.cpp  convert_hal_status.cpp  gas_sensor.cpp
Subsurface/Node/Common/Peripherals/inc/: PWMInterface.h  PWMManager.h  SPIInterface.h
Subsurface/Node/Common/Peripherals/src/: PWMInterface.cpp  PWMManager.cpp  SPIInterface.cpp
Subsurface/Node/Common/Peripherals/tests/mock/: mock_PWMInterface.cpp  mock_PWMInterface.h
Subsurface/Node/Common/peripherals/Src/: I2CInterface.cpp
Subsurface/Node/Common/peripherals/inc/: I2CInterface.h
Subsurface/Node/Common/peripherals/src/: I2CInterface.cpp
Subsurface/Node/Tests/: CMakeLists.txt
Subsurface/Node/Tests/Unity/src/: unity.h
Subsurface/Node/Tests/can/: tests.cpp
Subsurface/Node/Tests/mock/: mock_can_interface.cpp  mock_can_interface.h
Tools/boringNetworkTool/: README.MD  main.py  sending_config.json  tcp_server.py  udp_server.py
(+45 files in other folders)
